--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,16 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+        <section id ="cardDiamond"><span>A</span><span>♦</span><span>A</span></section>
+        <section id ="cardHeart"><span>A</span><span>♣</span><span>A</span></section>
+        <section id ="cardSpade"><span>A</span><span>♥</span><span>A</span></section>
+        <section id ="cardClub"><span>A</span><span>♠</span><span>A</span></section>
     </main>
+    <input id ="idInput" type='text' placeholder='Set ID'>
+    <input id ="colorInput" type='text' placeholder='Set Color'>
+    <button id = "btn" onclick="setCard()">Edit</button>
+    <script src="./index.js"></script>
 </body>
 </html>
+
+
